service/aks/production/app.namespace-production.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gcd-production
  labels:
    product: gcd
    vault: enabled
