service/aks/production/app.deployment-production.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: null
  name: integration-production
  namespace: gcd-production
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      release: integration-production
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
  template:
    metadata:
      labels:
        release: integration-production
        environment: production
      name: integration-production
      annotations:
        vault.security.banzaicloud.io/vault-addr: "https://vault.maersk-digital.net"
        vault.security.banzaicloud.io/vault-skip-verify: "true"
        vault.security.banzaicloud.io/vault-role: "gcd-production"
        vault.security.banzaicloud.io/vault-path: "core-prod-west-1"
    spec:
      hostname: integration-production
      imagePullSecrets:
      - name: maerskao
      containers:
      - name: api
        image: maerskao.azurecr.io/gcd/integration:_IMAGE_TAG_
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: api-port
        resources:
          requests:
            cpu: 500m
            memory: 2048Mi
          limits:
            cpu: 1000m
            memory: 4096Mi
---

apiVersion: v1
kind: Service
metadata:
  name: integration-production
  labels:
    release: integration-production
    environment: production
spec:
  type: ClusterIP
  selector:
    release: integration-production
  ports:
  - port: 8081
    targetPort: 8080
